# cpp-cmake-gtest-bp

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
project/: CMakeLists.txt  base.cpp  base.h  main.cpp
project/subproject/: CMakeLists.txt
